--- a/css/main.css
+++ b/css/main.css
@@ -38,6 +38,8 @@ h3 {
 
 img {
   display: block;
+  width: 100%;
+  height: auto;
 }
 
 .container {
@@ -184,6 +186,11 @@ body {
     margin-left: 30px;
   }
 }
+@media screen and (min-width: 768px) {
+  .navigation__links-contacts {
+    gap: 10px;
+  }
+}
 
 .navigation__links:last-child {
   margin-right: 0;
@@ -243,16 +250,31 @@ body {
   padding-bottom: 118px;
   text-align: center;
 }
+@media (min-device-pixel-ratio-2), (min-resolution: 192px), (min-resolution: 2dppx) {
+  .hero {
+    background-image: url(../images/mob/studio/header-mob@2x.jpg);
+  }
+}
 @media screen and (min-width: 768px) {
   .hero {
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/tablet/studio/header-tablet.jpg);
   }
 }
+@media screen and (min-width: 768px) and (min-device-pixel-ratio-2), screen and (min-width: 768px) and (min-resolution: 192px), screen and (min-width: 768px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: url(../images/tablet/studio/header-tablet@2x.jpg);
+  }
+}
 @media screen and (min-width: 1200px) {
   .hero {
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/desktop/studio/header-desktop.jpg);
     padding-top: 200px;
     padding-bottom: 200px;
+  }
+}
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio-2), screen and (min-width: 1200px) and (min-resolution: 192px), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: url(../images/desktop/studio/header-desktop@2x.jpg);
   }
 }
 
@@ -341,6 +363,7 @@ h1 {
 .team__list {
   margin: 0;
   text-align: center;
+  display: flex;
   padding-left: 0px;
   gap: 30px;
 }
@@ -348,6 +371,21 @@ h1 {
   background-color: var(--white-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+}
+@media screen and (max-width: 767px) {
+  .team__list {
+    flex-direction: column;
+  }
+}
+@media screen and (max-width: 1199px) {
+  .team__list {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+}
+
+.team__item {
+  flex-basis: calc((100% - 60px) / 2);
 }
 
 .team__position-info h3,
@@ -366,8 +404,8 @@ p {
   align-items: stretch;
   margin-left: 14px;
   margin-right: 14px;
-  padding-top: 16px;
-  padding-bottom: 30px;
+  margin-top: 16px;
+  margin-bottom: 30px;
   padding-left: 0;
   gap: 10px;
 }
@@ -423,13 +461,9 @@ p {
 }
 
 .clients__logo {
-  box-sizing: content-box;
   width: 106px;
   height: 60px;
   fill: #afb1b8;
-  padding: 16px 32px;
-  border: 1px solid #afb1b8;
-  border-radius: 4px;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .clients__logo:hover {
@@ -455,9 +489,20 @@ a:focus .clients__logo {
 
 .clients__list {
   display: flex;
-  justify-content: space-between;
+  flex-wrap: wrap;
+  justify-content: center;
   gap: 30px;
   padding-left: 0;
+}
+
+.clients__item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
+  width: 170px;
+  height: 92px;
 }
 
 .footer {
@@ -528,9 +573,16 @@ a:focus .clients__logo {
   color: var(--blue-color);
 }
 
-.footer__soc-links-margin {
-  padding-bottom: 30px;
-  margin-left: 70px;
+@media screen and (min-width: 480px) {
+  .footer__soc-links-container {
+    margin-left: 0px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer__soc-links-container {
+    padding-bottom: 30px;
+    text-align: left;
+  }
 }
 
 .footer__social-links {
@@ -538,9 +590,41 @@ a:focus .clients__logo {
   gap: 10px;
 }
 
+.footer__form-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+@media screen and (min-width: 1200px) {
+  .footer__form-container {
+    flex-direction: row;
+    text-align: left;
+  }
+}
+
 .footer__container {
   display: flex;
   align-items: center;
+  gap: 60px;
+  flex-direction: column;
+  display: flex;
+  align-items: center;
+  text-align: center;
+}
+@media screen and (min-width: 768px) {
+  .footer__container {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer__container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    text-align: left;
+  }
 }
 
 .footer__icon-bg {
@@ -578,12 +662,17 @@ a:focus .footer__icon-bg {
   text-transform: uppercase;
   color: #ffffff;
   margin-bottom: 20px;
+  text-align: center;
+}
+@media screen and (min-width: 1200px) {
+  .footer__p {
+    text-align: left;
+  }
 }
 
 .footer__form {
   padding-bottom: 30px;
   margin-top: 12px;
-  margin-left: 121px;
 }
 
 .footer__input {
@@ -605,6 +694,17 @@ a:focus .footer__icon-bg {
   font-size: 16px;
   line-height: 20px;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (min-width: 1200px) {
+  .footer__input {
+    margin-bottom: 0;
+    max-width: 358px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .footer__input {
+    width: 450px;
+  }
 }
 
 .footer__icon-plane {
@@ -1031,9 +1131,10 @@ a:focus .footer__icon-bg {
 
 .button-plane {
   margin-top: 44px;
+  width: 200px;
   background-color: var(--blue-color);
   color: var(--white-color);
-  margin: 7px 0 0 12px;
+  margin: 0px 0 0 12px;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.8;
@@ -1050,4 +1151,24 @@ a:focus .footer__icon-bg {
 
 .button-plane:hover {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+
+.boorger {
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+}
+@media screen and (min-width: 768px) {
+  .boorger {
+    display: none;
+  }
+}
+
+.boorger-menu {
+  position: absolute;
 }/*# sourceMappingURL=main.css.map */
