--- a/sass/layouts/_clients.scss
+++ b/sass/layouts/_clients.scss
@@ -1,12 +1,11 @@
 .clients__logo {
-  box-sizing: content-box;
+  // box-sizing: content-box;
   width: 106px;
   height: 60px;
   fill: #afb1b8;
-  padding: 16px 32px;
+  // padding: 16px 32px;
 
-  border: 1px solid #afb1b8;
-  border-radius: 4px;
+
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   
   
@@ -42,7 +41,19 @@ a:focus & {
 
 .clients__list {
   display: flex;
-  justify-content: space-between;
+  flex-wrap: wrap;
+  justify-content: center;
   gap: 30px;
   padding-left: 0;
+}
+
+
+.clients__item{
+  display: flex;
+justify-content: center;
+align-items: center;
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
+  width: 170px;
+  height: 92px;
 }
