--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -85,9 +85,19 @@
 
 }
 
-.footer__soc-links-margin {
-  padding-bottom: 30px;
-  margin-left: 70px;
+.footer__soc-links-container {
+  // padding-bottom: 30px;
+  // margin-left: 70px;
+
+   @media screen and(min-width:480px) {
+   margin-left: 0px;
+}
+
+ @media screen and(min-width:1200px) {
+   padding-bottom: 30px;
+  // margin-left: 70px;
+  text-align: left;
+}
 }
 
 
@@ -97,12 +107,54 @@
   gap: 10px;
 }
 
+.footer__form-container{
+display: flex;
+flex-direction: column;
+align-items: center;
+
+
+@media screen and(min-width:1200px) {
+  //  padding-bottom: 30px;
+ flex-direction: row;
+  text-align: left;
+}
+
+}
+
 
 
 .footer__container {
   display: flex;
   align-items: center;
-  // justify-content: space-between;
+  gap: 60px;
+  
+  
+
+  flex-direction: column;
+  display: flex;
+  align-items: center;
+  text-align: center;
+ 
+
+     @media screen and(min-width:768px) {
+    flex-direction: row;
+    flex-wrap: wrap;
+      justify-content: space-around;
+}
+
+@media screen and(min-width:1200px) {
+ 
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  text-align: left;
+}
+}
+
+
+
+@media screen and(min-width:768px) {
+  
 }
 
 
@@ -145,13 +197,20 @@
   text-transform: uppercase;
   color: #ffffff;
   margin-bottom: 20px;
-  
+  text-align: center;
+
+  @media screen and(min-width:1200px) {
+ 
+  // margin-left: 70px;
+  text-align: left;
 }
+}
+
 
 .footer__form {
   padding-bottom: 30px;
   margin-top: 12px;
-  margin-left: 121px;
+ 
 }
 
 .footer__input {
@@ -176,6 +235,15 @@
   line-height: 20px;
 
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  @media screen  and(min-width:1200px){
+    margin-bottom: 0;
+  max-width: 358px;
+  }
+
+  @media screen  and(min-width:768px){
+  width: 450px;
+  }
 }
 
 .footer__icon-plane {
