--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -1,6 +1,9 @@
 .hero {
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
      url(../images/mob/studio/header-mob.jpg);
+     @media (min-device-pixel-ratio-2),(min-resolution: 192px), (min-resolution: 2dppx){
+      background-image: url(../images/mob/studio/header-mob@2x.jpg);
+     }
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -12,12 +15,19 @@
   @media screen and(min-width: 768px) {
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
       url(../images/tablet/studio/header-tablet.jpg);
+      @media (min-device-pixel-ratio-2),(min-resolution: 192px), (min-resolution: 2dppx){
+      background-image: url(../images/tablet/studio/header-tablet@2x.jpg);
+     }
       
   }
 
   @media screen and(min-width: 1200px) {
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url(../images/hero.jpg);
+      url(../images/desktop/studio/header-desktop.jpg);
+      @media (min-device-pixel-ratio-2),(min-resolution: 192px), (min-resolution: 2dppx){
+      background-image: url(../images/desktop/studio/header-desktop@2x.jpg);
+     }
+      
       padding-top: 200px;
   padding-bottom: 200px;
   }
