--- a/sass/layouts/_team.scss
+++ b/sass/layouts/_team.scss
@@ -15,7 +15,7 @@
 .team__list {
   margin: 0;
   text-align: center;
-  // display: flex;
+  display: flex;
   padding-left: 0px;
   gap: 30px;
 
@@ -25,6 +25,22 @@
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
+
+@media screen and(max-width: 767px){
+  flex-direction:column;
+  // align-items: center;
+}
+@media screen and(max-width: 1199px){
+flex-wrap: wrap;
+justify-content: center;
+
+}
+  
+}
+
+
+.team__item{
+flex-basis: calc((100% - 60px)/2);
 }
 
 
@@ -46,8 +62,8 @@ p {
   align-items: stretch;
   margin-left: 14px;
   margin-right: 14px;
-  padding-top: 16px;
-  padding-bottom: 30px;
+  margin-top: 16px;
+  margin-bottom: 30px;
   padding-left: 0;
   gap: 10px;
 
