--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,7 +11,7 @@
 
 
 
-
+@import './components/mobile.scss';
 @import './layouts/header.scss';
 @import './layouts/hero';
 @import './layouts/skills';
