--- a/css/main.css
+++ b/css/main.css
@@ -86,10 +86,121 @@ body {
   margin: 0;
 }
 
+.mobile-menu {
+  z-index: 1;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  position: fixed;
+  background-color: #fff;
+  top: 0;
+  left: 0;
+  padding: 48px 40px;
+  transform: translatey(-100%);
+}
+@media screen and (min-width: 768px) {
+  .mobile-menu {
+    display: none;
+  }
+}
+.mobile-menu.is-open {
+  transform: translatey(0);
+}
+
+.boorger {
+  width: 40px;
+  height: 40px;
+  position: absolute;
+  right: 15px;
+  top: 20px;
+}
+@media screen and (min-width: 768px) {
+  .boorger {
+    display: none;
+  }
+}
+
+.mobile-nav__links {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+}
+
+.mobile-nav__link {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 47px;
+  letter-spacing: 0.02em;
+  color: inherit;
+  text-decoration: none;
+}
+
+.mobile-nav__link--active {
+  color: #2196F3;
+}
+
+.mobile-wrap {
+  display: flex;
+  flex-direction: column;
+  gap: 64px;
+}
+
+.mobile-contacts {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+}
+
+.mobile-contacts__tel {
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 40px;
+  /* identical to box height */
+  text-decoration: none;
+  letter-spacing: 0.02em;
+  color: #2196F3;
+}
+
+.mobile-contacts__mail {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 28px;
+  letter-spacing: 0.02em;
+  text-decoration: none;
+  color: #757575;
+}
+
+.mobile-soc {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+
+.mobile-soc__item:not(:last-child) {
+  padding-right: 10px;
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+}
+
+.mobile-soc__link {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 22px;
+  /* identical to box height, or 122% */
+  text-decoration: none;
+  letter-spacing: 0.02em;
+  color: #2196F3;
+}
+
 .header__container {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  position: relative;
 }
 
 .header__underline {
@@ -174,7 +285,6 @@ body {
   .navigation__links-contacts {
     display: flex;
     padding-left: 0;
-    margin-left: 93px;
     flex-direction: column;
   }
 }
@@ -235,10 +345,8 @@ body {
   color: var(--blue-color);
 }
 
-@media screen and (min-width: 768px) {
-  .boorger {
-    display: none;
-  }
+.header {
+  border-bottom: 1px solid #ECECEC;
 }
 
 .hero {
@@ -614,6 +722,7 @@ a:focus .clients__logo {
 @media screen and (min-width: 768px) {
   .footer__container {
     flex-direction: row;
+    align-items: flex-start;
     flex-wrap: wrap;
     justify-content: space-around;
   }
@@ -766,11 +875,16 @@ a:focus .footer__icon-bg {
 
 .portfolio__button-list-direction {
   display: flex;
-  justify-content: center;
+  flex-wrap: wrap;
   gap: 8px;
-  /* margin-top: 94px; */
+  padding-left: 15px;
   margin-bottom: 50px;
   margin-top: 0;
+}
+@media screen and (min-width: 768px) {
+  .portfolio__button-list-direction {
+    justify-content: center;
+  }
 }
 
 .portfolio__button-list {
@@ -803,8 +917,14 @@ a:focus .footer__icon-bg {
 .portfolio__work-list {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
   gap: 30px;
   padding-left: 0;
+}
+@media screen and (min-width: 768px) {
+  .portfolio__work-list {
+    justify-content: start;
+  }
 }
 .portfolio__work-list li {
   margin-right: 0px;
@@ -859,7 +979,7 @@ a:focus .footer__icon-bg {
   width: 100%;
   height: 100%;
   background: rgba(33, 150, 243, 0.9);
-  transform: translatey(100%);
+  transform: translatey(101%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -877,7 +997,8 @@ a:focus .footer__icon-bg {
   padding: 40px;
   position: fixed;
   background-color: #fff;
-  width: 528px;
+  max-width: 450px;
+  width: 100%;
   height: 581px;
   top: 50%;
   left: 50%;
@@ -885,6 +1006,11 @@ a:focus .footer__icon-bg {
   background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+}
+@media screen and (min-width: 768px) {
+  .modal {
+    max-width: 528px;
+  }
 }
 
 .backdrop {
@@ -973,10 +1099,16 @@ a:focus .footer__icon-bg {
 .modal__check-text {
   margin-bottom: 30px;
   display: block;
-  font-size: 14px;
-  line-height: 1, 7em;
+  font-size: 12px;
+  line-height: 1.1666666667;
   letter-spacing: 0.03em;
   color: #757575;
+}
+@media screen and (min-width: 768px) {
+  .modal__check-text {
+    font-size: 14px;
+    line-height: 1, 7em;
+  }
 }
 .modal__check-text a {
   text-decoration: underline;
