--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -138,6 +138,7 @@ align-items: center;
 
      @media screen and(min-width:768px) {
     flex-direction: row;
+    align-items: flex-start;
     flex-wrap: wrap;
       justify-content: space-around;
 }
