--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -2,6 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  position: relative;
 }
 
 .header__underline {
@@ -91,7 +92,7 @@ margin-left: auto;
   @include tablet{
  display: flex;
   padding-left: 0;
-  margin-left: 93px;
+  // margin-left: 93px;
   flex-direction: column;
   
   }
@@ -107,6 +108,7 @@ margin-left: auto;
 
   @media screen and (min-width:768px){
     gap:10px;
+
     
   }
 
@@ -171,12 +173,8 @@ margin-left: auto;
 }
 
 
-.boorger{
 
-  @include tablet{
-display: none;
-  }
-  
+
+.header{
+  border-bottom: 1px solid #ECECEC;
 }
-
-
