--- a/sass/layouts/_modal.scss
+++ b/sass/layouts/_modal.scss
@@ -2,7 +2,8 @@
   padding: 40px;
   position: fixed;
   background-color: #fff;
-  width: 528px;
+ max-width: 450px;
+ width: 100%;
   height: 581px;
   top: 50%;
   left: 50%;
@@ -11,6 +12,12 @@
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+
+  @media screen and(min-width:768px) {
+ max-width: 528px;
+ 
+    
+  }
 }
 
 
@@ -116,11 +123,17 @@
 .modal__check-text {
     margin-bottom: 30px;
     display: block;
-  font-size: 14px;
-  line-height: 1, 7em;
+  font-size: 12px;
+line-height: calc(14/12);
+  
   letter-spacing: 0.03em;
   color: #757575;
   
+@media screen and(min-width:768px){
+  font-size: 14px;
+  line-height: 1, 7em;
+}
+
 & a{
  text-decoration: underline;
   color: #2196f3;
