--- a/sass/layouts/_portfolio.scss
+++ b/sass/layouts/_portfolio.scss
@@ -1,10 +1,15 @@
 .portfolio__button-list-direction {
   display: flex;
-  justify-content: center;
+  flex-wrap: wrap;
+  // justify-content: center;
   gap: 8px;
-  /* margin-top: 94px; */
+  padding-left:15px ;
   margin-bottom: 50px;
   margin-top: 0;
+
+  @media screen and(min-width:768px){
+    justify-content: center;
+  }
 }
 
 .portfolio__button-list {
@@ -50,10 +55,17 @@
 .portfolio__work-list {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
   gap: 30px;
   padding-left: 0;
 
+@media screen and(min-width:768px){
+  justify-content: start;
+  
+}
+
  & li {
+  // flex-basis: calc((100% - 60px)/2);
   margin-right: 0px;
   border: 0px solid black;
   background: #ffffff;
@@ -117,7 +129,7 @@
   height: 100%;
   background: rgba(33, 150, 243, 0.9);
 
-  transform: translatey(100%);
+  transform: translatey(101%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
