Шлях до картинок

--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -26,6 +26,21 @@
 }
 
 
+.logo--white{
+   color: #2196f3;
+
+  & span{
+    color: #fff;
+  }
+}
+
+
+.footer__logo-margin{
+  margin-bottom:20px;
+ 
+}
+
+
 .footer__address {
   margin-bottom: 0px;
   margin-top: 0px;
