--- a/css/main.css
+++ b/css/main.css
@@ -212,18 +212,21 @@ body {
   align-items: center;
 }
 
-.header__logo {
+.logo--dark {
+  padding-bottom: 25px;
+  padding-top: 24px;
+}
+.logo--dark span {
+  color: #2196f3;
+}
+
+.logo {
   color: #000000;
   font-family: "Raleway";
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
   text-decoration: none;
-  padding-bottom: 25px;
-  padding-top: 24px;
-}
-.header__logo span {
-  color: #2196f3;
 }
 
 .header__web-link {
@@ -634,6 +637,17 @@ a:focus .clients__logo {
 }
 .footer__logo span {
   color: #fff;
+}
+
+.logo--white {
+  color: #2196f3;
+}
+.logo--white span {
+  color: #fff;
+}
+
+.footer__logo-margin {
+  margin-bottom: 20px;
 }
 
 .footer__address {
