--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -195,5 +195,9 @@ margin-left: auto;
 
 
 .header{
-  border-bottom: 1px solid #ECECEC;
+  
+}
+
+.header--underline{
+border-bottom: 1px solid #ECECEC;
 }
