--- a/css/main.css
+++ b/css/main.css
@@ -62,6 +62,11 @@ img {
   }
 }
 
+.list {
+  padding: 0;
+  margin: 0;
+}
+
 .section {
   padding-top: 60px;
   padding-bottom: 60px;
@@ -164,6 +169,11 @@ body {
   text-decoration: none;
   letter-spacing: 0.02em;
   color: #2196F3;
+}
+@media screen and (max-width: 480px) {
+  .mobile-contacts__tel {
+    font-size: 24px;
+  }
 }
 
 .mobile-contacts__mail {
@@ -597,6 +607,11 @@ a:focus .clients__logo {
   margin-bottom: 50px;
   margin-top: 0;
 }
+@media screen and (max-width: 480px) {
+  .clients {
+    display: none;
+  }
+}
 
 .clients__list {
   display: flex;
@@ -614,6 +629,16 @@ a:focus .clients__logo {
   border-radius: 4px;
   width: 170px;
   height: 92px;
+}
+@media screen and (min-width: 768px) {
+  .clients__item {
+    width: 226px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .clients__item {
+    width: 170px;
+  }
 }
 
 .footer {
@@ -941,6 +966,8 @@ a:focus .footer__icon-bg {
   }
 }
 .portfolio__work-list li {
+  display: flex;
+  flex-direction: column;
   margin-right: 0px;
   border: 0px solid black;
   background: #ffffff;
@@ -963,8 +990,10 @@ a:focus .footer__icon-bg {
   border-left: 1px solid #eeeeee;
   border-right: 1px solid #eeeeee;
   border-bottom: 1px solid #eeeeee;
+  min-width: 354px;
+  max-height: 110px;
+  flex: 1;
 }
-
 .portfolio__work-list-card li {
   margin: 0;
 }
