--- a/sass/components/_mobile.scss
+++ b/sass/components/_mobile.scss
@@ -97,7 +97,15 @@ text-decoration: none;
 letter-spacing: 0.02em;
 
 color: #2196F3;
+
+@media screen and(max-width:480px){
+    font-size: 24px;
 }
+}
+
+
+
+
 .mobile-contacts__mail{
    
   font-weight: 500;
