--- a/sass/layouts/_clients.scss
+++ b/sass/layouts/_clients.scss
@@ -35,6 +35,11 @@ a:focus & {
   margin-bottom: 50px;
   margin-top: 0;
 }
+
+@media screen and(max-width:480px) {
+  display: none;
+  
+}
 }
 
 
@@ -56,4 +61,12 @@ align-items: center;
   border-radius: 4px;
   width: 170px;
   height: 92px;
+
+  @media screen and(min-width:768px){
+    width: 226px;
+  }
+
+  @media screen and(min-width:1200px){
+    width: 170px;
+  }
 }
