--- a/sass/layouts/_portfolio.scss
+++ b/sass/layouts/_portfolio.scss
@@ -65,7 +65,8 @@
 }
 
  & li {
-  // flex-basis: calc((100% - 60px)/2);
+ display: flex;
+ flex-direction: column;
   margin-right: 0px;
   border: 0px solid black;
   background: #ffffff;
@@ -92,10 +93,18 @@
 }
 
 .portfolio__card-text {
+  // max-width: 354px;
   padding: 20px 24px;
   border-left: 1px solid #eeeeee;
   border-right: 1px solid #eeeeee;
   border-bottom: 1px solid #eeeeee;
+   min-width: 354px;
+   max-height: 110px;
+   flex: 1;
+  @media screen and(max-width:354px) {
+ 
+    
+  }
 }
 
 .portfolio__work-list-card li {
