--- a/sass/layouts/_clients.scss
+++ b/sass/layouts/_clients.scss
@@ -36,10 +36,10 @@ a:focus & {
   margin-top: 0;
 }
 
-@media screen and(max-width:480px) {
-  display: none;
+// @media screen and(max-width:480px) {
+//   display: none;
   
-}
+// }
 }
 
 
