--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -30,11 +30,11 @@
 // }
 
 .logo--dark {
-  padding-bottom: 225px;
-  padding-top: 224px;
+  padding-bottom: 25px;
+  padding-top: 24px;
 
   & span {
-    color: red/*#2196f3*/;
+    color: #2196f3;
   }
 }
 
